// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<Portal>
  <div
    data-component="flash"
    data-element="bar"
    data-role="baz"
  >
    <div
      className="carbon-flash carbon-flash--success"
    >
      <CSSTransitionGroup
        component="div"
        transitionAppear={true}
        transitionAppearTimeout={500}
        transitionEnter={true}
        transitionEnterTimeout={600}
        transitionLeave={true}
        transitionLeaveTimeout={600}
        transitionName="carbon-flash__slider"
      >
        <div
          className="carbon-flash__slider"
          key="slider"
        />
        <CSSTransitionGroup
          component="div"
          transitionAppear={false}
          transitionEnter={true}
          transitionEnterTimeout={200}
          transitionLeave={true}
          transitionLeaveTimeout={600}
          transitionName="carbon-flash__content"
        >
          <div
            className="carbon-flash__content"
          >
            <Icon
              bgSize="small"
              className="carbon-flash__icon"
              key="icon"
              type="tick"
            />
            <div
              className="carbon-flash__message"
              data-element="message"
              key="message"
            >
              <span>
                bun
                 
                <Link
                  className="carbon-flash__link"
                  data-element="more-info"
                  iconAlign="left"
                  onClick={[Function]}
                  tabbable={true}
                >
                  More Information
                </Link>
              </span>
            </div>
            <Icon
              bgSize="small"
              className="carbon-flash__close"
              data-element="close"
              key="close"
              onClick={[Function]}
              type="close"
            />
          </div>
        </CSSTransitionGroup>
      </CSSTransitionGroup>
    </div>
    <Alert
      ariaRole="dialog"
      autoFocus={true}
      data-element="info-dialog"
      key="bun"
      onCancel={[Function]}
      open={false}
      role="alertdialog"
      showCloseIcon={true}
      size="extra-small"
      title="bun"
    >
      dy
    </Alert>
  </div>
</Portal>
`;

exports[`Flash sliderHTML returns a div with the slider class names 1`] = `
<Portal>
  <div
    data-component="flash"
  >
    <div
      className="carbon-flash carbon-flash--success"
    >
      <CSSTransitionGroup
        component="div"
        transitionAppear={true}
        transitionAppearTimeout={500}
        transitionEnter={true}
        transitionEnterTimeout={600}
        transitionLeave={true}
        transitionLeaveTimeout={600}
        transitionName="carbon-flash__slider"
      >
        <div
          className="carbon-flash__slider"
          key="slider"
        />
        <CSSTransitionGroup
          component="div"
          transitionAppear={false}
          transitionEnter={true}
          transitionEnterTimeout={200}
          transitionLeave={true}
          transitionLeaveTimeout={600}
          transitionName="carbon-flash__content"
        >
          <div
            className="carbon-flash__content"
          >
            <Icon
              bgSize="small"
              className="carbon-flash__icon"
              key="icon"
              type="tick"
            />
            <div
              className="carbon-flash__message"
              data-element="message"
              key="message"
            >
              Danger Will Robinson!
            </div>
            <Icon
              bgSize="small"
              className="carbon-flash__close"
              data-element="close"
              key="close"
              type="close"
            />
          </div>
        </CSSTransitionGroup>
      </CSSTransitionGroup>
    </div>
  </div>
</Portal>
`;
